--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,9 @@ jobs:
         with:
           version: ${{ matrix.zig-version }}
 
+      - name: Check Formatting
+        run: zig fmt --ast-check --check .
+
       - name: Build
         run: zig build --summary all
 
